{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 56,
  "lineage": "832ba03f-07b8-3d60-0616-30d33ce8cef4",
  "resources": [
    {
      "module": "module.container",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:705301005849:security-group/sg-0670f2a411b1a8d4d",
            "description": "Security Group for Public Access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0670f2a411b1a8d4d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Security Group used to ECS Cluster",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bold-cd-acloud-repsol-prd-ecs-sg",
            "name_prefix": "",
            "owner_id": "705301005849",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-035ca384820a5b3da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancing",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:705301005849:listener/app/bold-cd-acloud-repsol-prd-lb/686f1bf96ad4a6ff/05cb56187e866561",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:705301005849:targetgroup/bold-cd-acloud-repsol-prd-tg/591215950070a7cf",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:705301005849:listener/app/bold-cd-acloud-repsol-prd-lb/686f1bf96ad4a6ff/05cb56187e866561",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:705301005849:loadbalancer/app/bold-cd-acloud-repsol-prd-lb/686f1bf96ad4a6ff",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Entity": "Bold",
              "Environment": "prd",
              "Name": "bold-cd-acloud-repsol-prd-http",
              "Project": "repsol",
              "Region": "eu-west-1",
              "Repository": "https://bitbucket.org/maraujoda/repsol-repo/src/main/",
              "Team": "ACloud",
              "Unit": "cd"
            },
            "tags_all": {
              "Entity": "Bold",
              "Environment": "prd",
              "Name": "bold-cd-acloud-repsol-prd-http",
              "Project": "repsol",
              "Region": "eu-west-1",
              "Repository": "https://bitbucket.org/maraujoda/repsol-repo/src/main/",
              "Team": "ACloud",
              "Unit": "cd"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancing.aws_alb_target_group.targetgroup",
            "module.loadbalancing.aws_lb.loadbalancer",
            "module.loadbalancing.aws_security_group.lb_sg",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc_network",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancing",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "targetgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:705301005849:targetgroup/bold-cd-acloud-repsol-prd-tg/591215950070a7cf",
            "arn_suffix": "targetgroup/bold-cd-acloud-repsol-prd-tg/591215950070a7cf",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:705301005849:targetgroup/bold-cd-acloud-repsol-prd-tg/591215950070a7cf",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "bold-cd-acloud-repsol-prd-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Entity": "Bold",
              "Environment": "prd",
              "Name": "bold-cd-acloud-repsol-prd-tg",
              "Project": "repsol",
              "Region": "eu-west-1",
              "Repository": "https://bitbucket.org/maraujoda/repsol-repo/src/main/",
              "Team": "ACloud",
              "Unit": "cd"
            },
            "tags_all": {
              "Entity": "Bold",
              "Environment": "prd",
              "Name": "bold-cd-acloud-repsol-prd-tg",
              "Project": "repsol",
              "Region": "eu-west-1",
              "Repository": "https://bitbucket.org/maraujoda/repsol-repo/src/main/",
              "Team": "ACloud",
              "Unit": "cd"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-035ca384820a5b3da"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancing",
      "mode": "managed",
      "type": "aws_lb",
      "name": "loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:705301005849:loadbalancer/app/bold-cd-acloud-repsol-prd-lb/686f1bf96ad4a6ff",
            "arn_suffix": "app/bold-cd-acloud-repsol-prd-lb/686f1bf96ad4a6ff",
            "desync_mitigation_mode": "defensive",
            "dns_name": "bold-cd-acloud-repsol-prd-lb-1739157704.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:705301005849:loadbalancer/app/bold-cd-acloud-repsol-prd-lb/686f1bf96ad4a6ff",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "bold-cd-acloud-repsol-prd-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c51e8c244a8e36e3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-014fe8d5c5cbddf16"
              },
              {
                "subnet_id": "subnet-02b0487fb76744b0a"
              },
              {
                "subnet_id": "subnet-0877fe1781a84f415"
              }
            ],
            "subnets": [
              "subnet-014fe8d5c5cbddf16",
              "subnet-02b0487fb76744b0a",
              "subnet-0877fe1781a84f415"
            ],
            "tags": {
              "Entity": "Bold",
              "Environment": "prd",
              "Name": "bold-cd-acloud-repsol-prd-lb",
              "Project": "repsol",
              "Region": "eu-west-1",
              "Repository": "https://bitbucket.org/maraujoda/repsol-repo/src/main/",
              "Team": "ACloud",
              "Unit": "cd"
            },
            "tags_all": {
              "Entity": "Bold",
              "Environment": "prd",
              "Name": "bold-cd-acloud-repsol-prd-lb",
              "Project": "repsol",
              "Region": "eu-west-1",
              "Repository": "https://bitbucket.org/maraujoda/repsol-repo/src/main/",
              "Team": "ACloud",
              "Unit": "cd"
            },
            "vpc_id": "vpc-035ca384820a5b3da",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "module.loadbalancing.aws_security_group.lb_sg",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc_network",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancing",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:705301005849:security-group/sg-0c51e8c244a8e36e3",
            "description": "Security Group for Public Access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c51e8c244a8e36e3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Security Group used to Application",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bold-cd-acloud-repsol-prd-lb-sg",
            "name_prefix": "",
            "owner_id": "705301005849",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-035ca384820a5b3da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cbcde41d55eb5018",
            "association_id": "eipassoc-0fe57d032ecf1633a",
            "domain": "vpc",
            "id": "eipalloc-0cbcde41d55eb5018",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-056d6fd1b15f3ec68",
            "private_dns": "ip-192-168-0-39.eu-west-1.compute.internal",
            "private_ip": "192.168.0.39",
            "public_dns": "ec2-34-255-251-66.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.255.251.66",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Entity": "Bold",
              "Environment": "prd",
              "Name": "bold-cd-acloud-repsol-prd-eip",
              "Project": "repsol",
              "Region": "eu-west-1",
              "Repository": "https://bitbucket.org/maraujoda/repsol-repo/src/main/",
              "Team": "ACloud",
              "Unit": "cd"
            },
            "tags_all": {
              "Entity": "Bold",
              "Environment": "prd",
              "Name": "bold-cd-acloud-repsol-prd-eip",
              "Project": "repsol",
              "Region": "eu-west-1",
              "Repository": "https://bitbucket.org/maraujoda/repsol-repo/src/main/",
              "Team": "ACloud",
              "Unit": "cd"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0890291363b1033a3",
            "association_id": "eipassoc-08153c3c900688746",
            "domain": "vpc",
            "id": "eipalloc-0890291363b1033a3",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-000711d6e99a8a091",
            "private_dns": "ip-192-168-0-78.eu-west-1.compute.internal",
            "private_ip": "192.168.0.78",
            "public_dns": "ec2-52-214-1-107.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.214.1.107",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Entity": "Bold",
              "Environment": "prd",
              "Name": "bold-cd-acloud-repsol-prd-eip",
              "Project": "repsol",
              "Region": "eu-west-1",
              "Repository": "https://bitbucket.org/maraujoda/repsol-repo/src/main/",
              "Team": "ACloud",
              "Unit": "cd"
            },
            "tags_all": {
              "Entity": "Bold",
              "Environment": "prd",
              "Name": "bold-cd-acloud-repsol-prd-eip",
              "Project": "repsol",
              "Region": "eu-west-1",
              "Repository": "https://bitbucket.org/maraujoda/repsol-repo/src/main/",
              "Team": "ACloud",
              "Unit": "cd"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f65f2a1eb4bf2455",
            "association_id": "eipassoc-0b5bcae286f5855e3",
            "domain": "vpc",
            "id": "eipalloc-0f65f2a1eb4bf2455",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0cda3260216fd1fe7",
            "private_dns": "ip-192-168-0-108.eu-west-1.compute.internal",
            "private_ip": "192.168.0.108",
            "public_dns": "ec2-99-80-246-218.eu-west-1.compute.amazonaws.com",
            "public_ip": "99.80.246.218",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Entity": "Bold",
              "Environment": "prd",
              "Name": "bold-cd-acloud-repsol-prd-eip",
              "Project": "repsol",
              "Region": "eu-west-1",
              "Repository": "https://bitbucket.org/maraujoda/repsol-repo/src/main/",
              "Team": "ACloud",
              "Unit": "cd"
            },
            "tags_all": {
              "Entity": "Bold",
              "Environment": "prd",
              "Name": "bold-cd-acloud-repsol-prd-eip",
              "Project": "repsol",
              "Region": "eu-west-1",
              "Repository": "https://bitbucket.org/maraujoda/repsol-repo/src/main/",
              "Team": "ACloud",
              "Unit": "cd"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:705301005849:internet-gateway/igw-0be596d3e7c1e9b53",
            "id": "igw-0be596d3e7c1e9b53",
            "owner_id": "705301005849",
            "tags": {
              "Entity": "Bold",
              "Environment": "prd",
              "Name": "bold-cd-acloud-repsol-prd-igw",
              "Project": "repsol",
              "Region": "eu-west-1",
              "Repository": "https://bitbucket.org/maraujoda/repsol-repo/src/main/",
              "Team": "ACloud",
              "Unit": "cd"
            },
            "tags_all": {
              "Entity": "Bold",
              "Environment": "prd",
              "Name": "bold-cd-acloud-repsol-prd-igw",
              "Project": "repsol",
              "Region": "eu-west-1",
              "Repository": "https://bitbucket.org/maraujoda/repsol-repo/src/main/",
              "Team": "ACloud",
              "Unit": "cd"
            },
            "vpc_id": "vpc-035ca384820a5b3da"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cbcde41d55eb5018",
            "connectivity_type": "public",
            "id": "nat-06066e1ec874f2beb",
            "network_interface_id": "eni-056d6fd1b15f3ec68",
            "private_ip": "192.168.0.39",
            "public_ip": "34.255.251.66",
            "subnet_id": "subnet-0877fe1781a84f415",
            "tags": {
              "Entity": "Bold",
              "Environment": "prd",
              "Name": "bold-cd-acloud-repsol-prd-ngw",
              "Project": "repsol",
              "Region": "eu-west-1",
              "Repository": "https://bitbucket.org/maraujoda/repsol-repo/src/main/",
              "Team": "ACloud",
              "Unit": "cd"
            },
            "tags_all": {
              "Entity": "Bold",
              "Environment": "prd",
              "Name": "bold-cd-acloud-repsol-prd-ngw",
              "Project": "repsol",
              "Region": "eu-west-1",
              "Repository": "https://bitbucket.org/maraujoda/repsol-repo/src/main/",
              "Team": "ACloud",
              "Unit": "cd"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.elastic_ip",
            "module.networking.aws_internet_gateway.internet_gateway",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc_network",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.az_list"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0890291363b1033a3",
            "connectivity_type": "public",
            "id": "nat-0f8035d27fa9d2d55",
            "network_interface_id": "eni-000711d6e99a8a091",
            "private_ip": "192.168.0.78",
            "public_ip": "52.214.1.107",
            "subnet_id": "subnet-02b0487fb76744b0a",
            "tags": {
              "Entity": "Bold",
              "Environment": "prd",
              "Name": "bold-cd-acloud-repsol-prd-ngw",
              "Project": "repsol",
              "Region": "eu-west-1",
              "Repository": "https://bitbucket.org/maraujoda/repsol-repo/src/main/",
              "Team": "ACloud",
              "Unit": "cd"
            },
            "tags_all": {
              "Entity": "Bold",
              "Environment": "prd",
              "Name": "bold-cd-acloud-repsol-prd-ngw",
              "Project": "repsol",
              "Region": "eu-west-1",
              "Repository": "https://bitbucket.org/maraujoda/repsol-repo/src/main/",
              "Team": "ACloud",
              "Unit": "cd"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.elastic_ip",
            "module.networking.aws_internet_gateway.internet_gateway",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc_network",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.az_list"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f65f2a1eb4bf2455",
            "connectivity_type": "public",
            "id": "nat-072796b4a69729cb4",
            "network_interface_id": "eni-0cda3260216fd1fe7",
            "private_ip": "192.168.0.108",
            "public_ip": "99.80.246.218",
            "subnet_id": "subnet-014fe8d5c5cbddf16",
            "tags": {
              "Entity": "Bold",
              "Environment": "prd",
              "Name": "bold-cd-acloud-repsol-prd-ngw",
              "Project": "repsol",
              "Region": "eu-west-1",
              "Repository": "https://bitbucket.org/maraujoda/repsol-repo/src/main/",
              "Team": "ACloud",
              "Unit": "cd"
            },
            "tags_all": {
              "Entity": "Bold",
              "Environment": "prd",
              "Name": "bold-cd-acloud-repsol-prd-ngw",
              "Project": "repsol",
              "Region": "eu-west-1",
              "Repository": "https://bitbucket.org/maraujoda/repsol-repo/src/main/",
              "Team": "ACloud",
              "Unit": "cd"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.elastic_ip",
            "module.networking.aws_internet_gateway.internet_gateway",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc_network",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0326775684ca725d31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06066e1ec874f2beb",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0326775684ca725d3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.elastic_ip",
            "module.networking.aws_internet_gateway.internet_gateway",
            "module.networking.aws_nat_gateway.nat_gateway",
            "module.networking.aws_route_table.route_table_private",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc_network",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.az_list"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b37da1a193917fdc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f8035d27fa9d2d55",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b37da1a193917fdc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.elastic_ip",
            "module.networking.aws_internet_gateway.internet_gateway",
            "module.networking.aws_nat_gateway.nat_gateway",
            "module.networking.aws_route_table.route_table_private",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc_network",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.az_list"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-086cfc1b53092388e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-072796b4a69729cb4",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-086cfc1b53092388e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.elastic_ip",
            "module.networking.aws_internet_gateway.internet_gateway",
            "module.networking.aws_nat_gateway.nat_gateway",
            "module.networking.aws_route_table.route_table_private",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc_network",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0be596d3e7c1e9b53",
            "id": "r-rtb-02bbdc96ee0afc2381080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02bbdc96ee0afc238",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.internet_gateway",
            "module.networking.aws_vpc.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:705301005849:route-table/rtb-0326775684ca725d3",
            "id": "rtb-0326775684ca725d3",
            "owner_id": "705301005849",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06066e1ec874f2beb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Entity": "Bold",
              "Environment": "prd",
              "Name": "bold-cd-acloud-repsol-private-prd-rt",
              "Project": "repsol",
              "Region": "eu-west-1",
              "Repository": "https://bitbucket.org/maraujoda/repsol-repo/src/main/",
              "Team": "ACloud",
              "Unit": "cd"
            },
            "tags_all": {
              "Entity": "Bold",
              "Environment": "prd",
              "Name": "bold-cd-acloud-repsol-private-prd-rt",
              "Project": "repsol",
              "Region": "eu-west-1",
              "Repository": "https://bitbucket.org/maraujoda/repsol-repo/src/main/",
              "Team": "ACloud",
              "Unit": "cd"
            },
            "timeouts": null,
            "vpc_id": "vpc-035ca384820a5b3da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc_network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:705301005849:route-table/rtb-0b37da1a193917fdc",
            "id": "rtb-0b37da1a193917fdc",
            "owner_id": "705301005849",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f8035d27fa9d2d55",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Entity": "Bold",
              "Environment": "prd",
              "Name": "bold-cd-acloud-repsol-private-prd-rt",
              "Project": "repsol",
              "Region": "eu-west-1",
              "Repository": "https://bitbucket.org/maraujoda/repsol-repo/src/main/",
              "Team": "ACloud",
              "Unit": "cd"
            },
            "tags_all": {
              "Entity": "Bold",
              "Environment": "prd",
              "Name": "bold-cd-acloud-repsol-private-prd-rt",
              "Project": "repsol",
              "Region": "eu-west-1",
              "Repository": "https://bitbucket.org/maraujoda/repsol-repo/src/main/",
              "Team": "ACloud",
              "Unit": "cd"
            },
            "timeouts": null,
            "vpc_id": "vpc-035ca384820a5b3da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc_network"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:705301005849:route-table/rtb-086cfc1b53092388e",
            "id": "rtb-086cfc1b53092388e",
            "owner_id": "705301005849",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-072796b4a69729cb4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Entity": "Bold",
              "Environment": "prd",
              "Name": "bold-cd-acloud-repsol-private-prd-rt",
              "Project": "repsol",
              "Region": "eu-west-1",
              "Repository": "https://bitbucket.org/maraujoda/repsol-repo/src/main/",
              "Team": "ACloud",
              "Unit": "cd"
            },
            "tags_all": {
              "Entity": "Bold",
              "Environment": "prd",
              "Name": "bold-cd-acloud-repsol-private-prd-rt",
              "Project": "repsol",
              "Region": "eu-west-1",
              "Repository": "https://bitbucket.org/maraujoda/repsol-repo/src/main/",
              "Team": "ACloud",
              "Unit": "cd"
            },
            "timeouts": null,
            "vpc_id": "vpc-035ca384820a5b3da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:705301005849:route-table/rtb-093a158e2f454b26c",
            "id": "rtb-093a158e2f454b26c",
            "owner_id": "705301005849",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0be596d3e7c1e9b53",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Entity": "Bold",
              "Environment": "prd",
              "Name": "bold-cd-acloud-repsol-public-prd-rt",
              "Project": "repsol",
              "Region": "eu-west-1",
              "Repository": "https://bitbucket.org/maraujoda/repsol-repo/src/main/",
              "Team": "ACloud",
              "Unit": "cd"
            },
            "tags_all": {
              "Entity": "Bold",
              "Environment": "prd",
              "Name": "bold-cd-acloud-repsol-public-prd-rt",
              "Project": "repsol",
              "Region": "eu-west-1",
              "Repository": "https://bitbucket.org/maraujoda/repsol-repo/src/main/",
              "Team": "ACloud",
              "Unit": "cd"
            },
            "timeouts": null,
            "vpc_id": "vpc-035ca384820a5b3da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.internet_gateway",
            "module.networking.aws_vpc.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bac091de435312e",
            "route_table_id": "rtb-0326775684ca725d3",
            "subnet_id": "subnet-01f37c5915438e8a0"
          },
          "dependencies": [
            "module.networking.aws_route_table.route_table_private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc_network",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.az_list"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020e2e7e27b35ba89",
            "route_table_id": "rtb-0b37da1a193917fdc",
            "subnet_id": "subnet-0f45cfce28d4363af"
          },
          "dependencies": [
            "module.networking.aws_route_table.route_table_private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc_network",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.az_list"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0483a3cdc6b906864",
            "route_table_id": "rtb-086cfc1b53092388e",
            "subnet_id": "subnet-0b521d695eb980f9b"
          },
          "dependencies": [
            "module.networking.aws_route_table.route_table_private",
            "module.networking.aws_subnet.private_subnet",
            "module.networking.aws_vpc.vpc_network",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a741ca76655d637",
            "route_table_id": "rtb-093a158e2f454b26c",
            "subnet_id": "subnet-0877fe1781a84f415"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.internet_gateway",
            "module.networking.aws_route_table.route_table_public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc_network",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.az_list"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d71de20f640f4d3",
            "route_table_id": "rtb-093a158e2f454b26c",
            "subnet_id": "subnet-02b0487fb76744b0a"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.internet_gateway",
            "module.networking.aws_route_table.route_table_public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc_network",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.az_list"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7dd6f05202194ee",
            "route_table_id": "rtb-093a158e2f454b26c",
            "subnet_id": "subnet-014fe8d5c5cbddf16"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.internet_gateway",
            "module.networking.aws_route_table.route_table_public",
            "module.networking.aws_subnet.public_subnet",
            "module.networking.aws_vpc.vpc_network",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:705301005849:security-group/sg-060223ba662c5955b",
            "description": "Security Group for Public Access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-060223ba662c5955b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bold-cd-acloud-repsol-prd-alb-sg",
            "name_prefix": "",
            "owner_id": "705301005849",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-035ca384820a5b3da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc_network"
          ]
        },
        {
          "index_key": "rds",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:705301005849:security-group/sg-082a02646b5f7a280",
            "description": "Security Group for RDS Aurora Access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-082a02646b5f7a280",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/20"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "bold-cd-acloud-repsol-prd-rds-sg",
            "name_prefix": "",
            "owner_id": "705301005849",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-035ca384820a5b3da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:705301005849:subnet/subnet-01f37c5915438e8a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "192.168.0.16/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f37c5915438e8a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "705301005849",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Entity": "Bold",
              "Environment": "prd",
              "Name": "bold-cd-acloud-repsol-private-prd-snet",
              "Project": "repsol",
              "Region": "eu-west-1",
              "Repository": "https://bitbucket.org/maraujoda/repsol-repo/src/main/",
              "Team": "ACloud",
              "Unit": "cd"
            },
            "tags_all": {
              "Entity": "Bold",
              "Environment": "prd",
              "Name": "bold-cd-acloud-repsol-private-prd-snet",
              "Project": "repsol",
              "Region": "eu-west-1",
              "Repository": "https://bitbucket.org/maraujoda/repsol-repo/src/main/",
              "Team": "ACloud",
              "Unit": "cd"
            },
            "vpc_id": "vpc-035ca384820a5b3da"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc_network",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.az_list"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:705301005849:subnet/subnet-0f45cfce28d4363af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "192.168.0.48/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f45cfce28d4363af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "705301005849",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Entity": "Bold",
              "Environment": "prd",
              "Name": "bold-cd-acloud-repsol-private-prd-snet",
              "Project": "repsol",
              "Region": "eu-west-1",
              "Repository": "https://bitbucket.org/maraujoda/repsol-repo/src/main/",
              "Team": "ACloud",
              "Unit": "cd"
            },
            "tags_all": {
              "Entity": "Bold",
              "Environment": "prd",
              "Name": "bold-cd-acloud-repsol-private-prd-snet",
              "Project": "repsol",
              "Region": "eu-west-1",
              "Repository": "https://bitbucket.org/maraujoda/repsol-repo/src/main/",
              "Team": "ACloud",
              "Unit": "cd"
            },
            "vpc_id": "vpc-035ca384820a5b3da"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc_network",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.az_list"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:705301005849:subnet/subnet-0b521d695eb980f9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "192.168.0.80/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b521d695eb980f9b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "705301005849",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Entity": "Bold",
              "Environment": "prd",
              "Name": "bold-cd-acloud-repsol-private-prd-snet",
              "Project": "repsol",
              "Region": "eu-west-1",
              "Repository": "https://bitbucket.org/maraujoda/repsol-repo/src/main/",
              "Team": "ACloud",
              "Unit": "cd"
            },
            "tags_all": {
              "Entity": "Bold",
              "Environment": "prd",
              "Name": "bold-cd-acloud-repsol-private-prd-snet",
              "Project": "repsol",
              "Region": "eu-west-1",
              "Repository": "https://bitbucket.org/maraujoda/repsol-repo/src/main/",
              "Team": "ACloud",
              "Unit": "cd"
            },
            "vpc_id": "vpc-035ca384820a5b3da"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc_network",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:705301005849:subnet/subnet-0877fe1781a84f415",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "192.168.0.32/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0877fe1781a84f415",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "705301005849",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Entity": "Bold",
              "Environment": "prd",
              "Name": "bold-cd-acloud-repsol-public-prd-snet",
              "Project": "repsol",
              "Region": "eu-west-1",
              "Repository": "https://bitbucket.org/maraujoda/repsol-repo/src/main/",
              "Team": "ACloud",
              "Unit": "cd"
            },
            "tags_all": {
              "Entity": "Bold",
              "Environment": "prd",
              "Name": "bold-cd-acloud-repsol-public-prd-snet",
              "Project": "repsol",
              "Region": "eu-west-1",
              "Repository": "https://bitbucket.org/maraujoda/repsol-repo/src/main/",
              "Team": "ACloud",
              "Unit": "cd"
            },
            "vpc_id": "vpc-035ca384820a5b3da"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc_network",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.az_list"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:705301005849:subnet/subnet-02b0487fb76744b0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "192.168.0.64/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b0487fb76744b0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "705301005849",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Entity": "Bold",
              "Environment": "prd",
              "Name": "bold-cd-acloud-repsol-public-prd-snet",
              "Project": "repsol",
              "Region": "eu-west-1",
              "Repository": "https://bitbucket.org/maraujoda/repsol-repo/src/main/",
              "Team": "ACloud",
              "Unit": "cd"
            },
            "tags_all": {
              "Entity": "Bold",
              "Environment": "prd",
              "Name": "bold-cd-acloud-repsol-public-prd-snet",
              "Project": "repsol",
              "Region": "eu-west-1",
              "Repository": "https://bitbucket.org/maraujoda/repsol-repo/src/main/",
              "Team": "ACloud",
              "Unit": "cd"
            },
            "vpc_id": "vpc-035ca384820a5b3da"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc_network",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.az_list"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:705301005849:subnet/subnet-014fe8d5c5cbddf16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "192.168.0.96/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014fe8d5c5cbddf16",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "705301005849",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Entity": "Bold",
              "Environment": "prd",
              "Name": "bold-cd-acloud-repsol-public-prd-snet",
              "Project": "repsol",
              "Region": "eu-west-1",
              "Repository": "https://bitbucket.org/maraujoda/repsol-repo/src/main/",
              "Team": "ACloud",
              "Unit": "cd"
            },
            "tags_all": {
              "Entity": "Bold",
              "Environment": "prd",
              "Name": "bold-cd-acloud-repsol-public-prd-snet",
              "Project": "repsol",
              "Region": "eu-west-1",
              "Repository": "https://bitbucket.org/maraujoda/repsol-repo/src/main/",
              "Team": "ACloud",
              "Unit": "cd"
            },
            "vpc_id": "vpc-035ca384820a5b3da"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc_network",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:705301005849:vpc/vpc-035ca384820a5b3da",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/20",
            "default_network_acl_id": "acl-04f9628df72cf987f",
            "default_route_table_id": "rtb-02bbdc96ee0afc238",
            "default_security_group_id": "sg-03adcbd8bd08acaac",
            "dhcp_options_id": "dopt-09765171972af75e1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-035ca384820a5b3da",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02bbdc96ee0afc238",
            "owner_id": "705301005849",
            "tags": {
              "Entity": "bold",
              "Environment": "prd",
              "Name": "bold-cd-acloud-repsol-prd-vpc",
              "Project": "repsol",
              "Region": "eu-west-1",
              "Repository": "https://bitbucket.org/maraujoda/repsol-repo/src/main/",
              "Team": "acloud",
              "Unit": "cd"
            },
            "tags_all": {
              "Entity": "bold",
              "Environment": "prd",
              "Name": "bold-cd-acloud-repsol-prd-vpc",
              "Project": "repsol",
              "Region": "eu-west-1",
              "Repository": "https://bitbucket.org/maraujoda/repsol-repo/src/main/",
              "Team": "acloud",
              "Unit": "cd"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}